--- a/app/.vitepress/theme/style.css
+++ b/app/.vitepress/theme/style.css
@@ -5,7 +5,7 @@
 
 /* font-family */
 :root {
-  --vp-font-family-base: Product Sans, sans-serif, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
+  --vp-font-family-base: Outfit, sans-serif, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
     Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
 }
 
